--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,9 +1,23 @@
 version: '3.8'
 
 services:
-  relay-voice-server:
-    image: relay-voice-server:latest
-    container_name: relay-voice-server
+  frontend:
+    image: relay-frontend:latest
+    container_name: relay-frontend
+    restart: unless-stopped
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./frontend:/app
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+    networks:
+      - relay-network
+    depends_on:
+      - backend
+  backend:
+    image: relay-backend:latest
+    container_name: relay-backend
     restart: unless-stopped
     ports:
       - "8080:8080"
