--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,7 +1,7 @@
 # Build stage
 FROM node:18-alpine as build
 WORKDIR /app
-COPY package*.json ./
+COPY frontend/package*.json ./
 RUN npm install
 COPY . .
 RUN npm run build
