--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -3,7 +3,8 @@ FROM node:18-alpine as build
 WORKDIR /app
 COPY frontend/package*.json ./
 RUN npm install
-COPY . .
+# Copy rest of frontend code
+COPY frontend/ .
 RUN npm run build
 
 # Production stage
