--- a/nginx.conf
+++ b/nginx.conf
@@ -13,7 +13,7 @@ http {
         }
 
         location /api {
-            proxy_pass http://relay-voice-server:8080;
+            proxy_pass http://backend:8080;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header X-Forwarded-Proto $scheme;
