--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -4,11 +4,11 @@ FROM node:18-alpine
 WORKDIR /usr/src/app
 
 # Install app dependencies
-COPY package*.json ./
+COPY backend/package*.json ./
 RUN npm ci --only=production
 
 # Copy app source
-COPY src/ ./src/
+COPY backend/src/ ./src/
 
 # Create non-root user
 RUN addgroup -g 1001 -S nodejs
@@ -19,11 +19,7 @@ RUN chown -R relay:nodejs /usr/src/app
 USER relay
 
 # Expose port
-EXPOSE 8080
-
-# Health check
-HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
-  CMD node -e "require('http').get('http://localhost:8080/health', (res) => { process.exit(res.statusCode === 200 ? 0 : 1) })"
+EXPOSE 8080 
 
 # Start the application
 CMD ["node", "src/server.js"]
