--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,7 @@ jobs:
       OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
       GH_TOKEN: ${{ secrets.GH_TOKEN }}
       GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+      GIT_USERNAME: ${{ secrets.GIT_USERNAME }}
 
     steps:
       - name: Checkout code
@@ -65,6 +66,10 @@ jobs:
       - name: Stop and remove existing containers
         env:
           COMPOSE_PROJECT_NAME: relay
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+          GIT_USERNAME: ${{ secrets.GIT_USERNAME }}
         run: |
           docker --context ${{ env.DOCKER_CONTEXT_NAME }} compose --file ${{ env.DOCKER_COMPOSE_FILE }} \
             stop frontend backend || true
