--- a/backend/package.json
+++ b/backend/package.json
@@ -25,22 +25,23 @@
   "author": "Relay Team",
   "license": "MIT",
   "dependencies": {
-    "openai": "^4.67.3",
-    "@octokit/rest": "^20.0.2",
     "@google/generative-ai": "^0.21.0",
-    "express": "^4.18.2",
-    "socket.io": "^4.7.4",
-    "socket.io-client": "^4.7.4",
+    "@octokit/rest": "^20.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "node-pty": "^1.0.0",
+    "openai": "^4.67.3",
+    "socket.io": "^4.7.4",
+    "socket.io-client": "^4.7.4",
     "uuid": "^9.0.1",
     "ws": "^8.14.2"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2",
-    "jest": "^29.7.0",
     "@types/node": "^20.10.5",
     "eslint": "^8.56.0",
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.2",
     "prettier": "^3.1.1"
   },
   "engines": {
