--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
   "author": "Relay Team",
   "license": "MIT",
   "dependencies": {
+    "@anthropic-ai/claude-code": "^1.0.30",
     "@google/generative-ai": "^0.21.0",
     "@octokit/rest": "^20.0.2",
     "cors": "^2.8.5",
@@ -32,6 +33,9 @@
     "express": "^4.18.2",
     "node-pty": "^1.0.0",
     "openai": "^4.67.3",
+    "pg": "^8.11.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.35.2",
     "socket.io": "^4.7.4",
     "socket.io-client": "^4.7.4",
     "uuid": "^9.0.1",
