--- a/backend/package.json
+++ b/backend/package.json
@@ -36,6 +36,7 @@
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.35.2",
+    "sqlite3": "^5.1.7",
     "socket.io": "^4.7.4",
     "socket.io-client": "^4.7.4",
     "uuid": "^9.0.1",
